--- a/Springboots-list-activeMQ/pom.xml
+++ b/Springboots-list-activeMQ/pom.xml
@@ -60,6 +60,16 @@
 			            <artifactId>activemq-pool</artifactId>
 			            <version>5.12.0</version>
 		        </dependency>
+		        <dependency>
+		        	<groupId>org.apache.httpcomponents</groupId>
+		        	<artifactId>httpclient</artifactId>
+		        	<version>4.5.3</version>
+		        </dependency>
+		        <dependency>
+		        	<groupId>org.apache.httpcomponents</groupId>
+		        	<artifactId>httpcore</artifactId>
+		        	<version>4.4.6</version>
+		        </dependency>
 	</dependencies>
 
 	<build>
