--- a/Springboots-list-activeMQ/src/main/resources/application.properties
+++ b/Springboots-list-activeMQ/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-server.port=8082
-server.servlet.context-path=/boot-redis
+server.port=8084
+server.servlet.context-path=/boot-mq
+#server.ssl.key-alias=tomcathttps
+#server.ssl.key-store-password=ty123456
+#server.ssl.key-store=tang.p12
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 activemq.url=tcp://localhost:61616
 #cluster configuration
@@ -17,4 +20,6 @@ activemq.queue=Q_Queue1
 activemq.virtual.topic=VirtualTopic.Topic1
 activemq.virtual.topic.A=Consumer.A.VirtualTopic.Topic1
 activemq.virtual.topic.B=Consumer.B.VirtualTopic.Topic1
+
+com.sms.url=http://v.juhe.cn/sms/send?mobile=18209579408&tpl_id=143664&key=52733ccb96422fcf198077b33a704489&tpl_value=%23code%23%3d256265%26%23m
 
