过滤一些跟环境相关的文件和文件

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,19 @@ bin-release/
 */.settings/
 */.mvn/
 */target/
-*/hELP.md
+*/Springboots-list-*/.apt_generated/
+*/Springboots-list-*/.apt_generated_tests/
+*/Springboots-list-*/.project/
+*/Springboots-list-*/.classpath/
+*/Springboots-list-*/.target/
+*/Springboots-list-*/.gitignore
+*/Springboots-list-*/.mvn/
+*/Springboots-list-*/mvnw
+*/Springboots-list-*/mvnw.cmd
+*/Springboots-list-*/.factorypath
+*/Springboots-list-*/.setting/
+
+
 */.project/
 */.classpath/
 */mvnw
