--- a/Springboots-list-activeMQ/.gitignore
+++ b/Springboots-list-activeMQ/.gitignore
@@ -1,31 +1,28 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+# Build and Release Folders
+bin-debug/
+bin-release/
+[Oo]bj/
+[Bb]in/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Other files and folders
+*/.settings/
+*/.mvn/
+*/target/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+*/.project/
+*/.classpath/
+*/mvnw
+*/mvnw.cmd
+# Executables
+*.swf
+*.air
+*.ipa
+*.apk
+*.class
+*.classes
+*.jar
+*.war
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-
-### VS Code ###
-.vscode/
+# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
+# should NOT be excluded as they contain compiler settings and other important
+# information for Eclipse / Flash Builder.
