--- a/Springboots-list-security/.gitignore
+++ b/Springboots-list-security/.gitignore
@@ -1,8 +1,17 @@
 
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+.apt_generated/
+.apt_generated_tests/
+.project/
+.classpath/
+.target/
+.gitignore
+.mvn/
+mvnw
+mvnw.cmd
+.factorypath
+.setting/
+
 
 ### STS ###
 .apt_generated
