--- a/Springboots-list-mp/.gitignore
+++ b/Springboots-list-mp/.gitignore
@@ -1,8 +1,16 @@
-HELP.md
+
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+.apt_generated/
+.apt_generated_tests/
+.project/
+.classpath/
+.target/
+.gitignore
+.mvn/
+mvnw
+mvnw.cmd
+.factorypath
+.setting/
 
 ### STS ###
 .apt_generated
