--- a/Springboots-list-shiro/.gitignore
+++ b/Springboots-list-shiro/.gitignore
@@ -1,5 +1,16 @@
-HELP.md
+
 target/
+.apt_generated/
+.apt_generated_tests/
+.project/
+.classpath/
+.target/
+.gitignore
+.mvn/
+mvnw
+mvnw.cmd
+.factorypath
+.setting/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
